--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,18 +26,6 @@ p {
     margin: 0px;
 }
 
-.h1 {
-    font-size: 72px;
-}
-
-.h2 {
-    font-size: 36px;
-}
-
-.h3 {
-    font-size: 24px;
-}
-
 .line {
     background: #ffffff44;
     height: 24px;
